--- a/package.json
+++ b/package.json
@@ -19,14 +19,10 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "firebase": "^10.1.0",
-    "firebase-admin": "^11.10.1",
-    "firebaseui": "^6.1.0",
     "next": "13.4.10",
     "next-auth": "^4.22.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "node-sass": "^9.0.0"
