--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fontsource/roboto": "^5.0.5",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@nextui-org/react": "^2.1.5",
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "framer-motion": "^10.16.1",
     "next": "13.4.10",
     "next-auth": "^4.22.5",
     "react": "18.2.0",
