--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "framer-motion": "^10.16.1",
     "next": "13.4.10",
     "next-auth": "^4.22.5",
+    "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "node-sass": "^9.0.0"
   }
 }
