--- a/.github/workflows/Prod_Deployment.yml
+++ b/.github/workflows/Prod_Deployment.yml
@@ -46,5 +46,6 @@ jobs:
         id: closepullrequest
         uses: Azure/static-web-apps-deploy@v1
         with:
+          app_location: "/"
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_ZEALOUS_FLOWER_0AE0EEB10 }}
           action: "close"
