--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.312.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
