--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "i18next": "^23.10.0",
     "lucide-react": "^0.312.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
