--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.0.4",
+    "next-intl": "^3.9.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
